# kalkulator_do_szkol_srednich

./: Cargo.toml  PRIVACY_POLICY.md  info.txt
.github/workflows/: rust.yml
assets/: gdansk.toml  poznan.toml  warszawa.toml
src/: main.rs
src/android/: AndroidManifest.xml
