[package]
name = "kalkulator_do_szkol_sredniej"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "assets/"  
res = "android_res"
icon = "@mipmap/ic_launcher"
version_code = 14
version_name = "Initial"
min_sdk_version = 21
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[package.metadata.android.activity_attributes]
"android:exported" =  "true"
"android:screenOrientation" = "userLandscape"

[[package.metadata.android.feature]]
name = "android.hardware.touchscreen"
required = false

[dependencies]
egui-macroquad = "0.17.3"
egui_plot = "0.32.1"
macroquad = "0.4.14"
egui_extras = { version = "=0.31.1", features = ["image"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
quad-storage = "0.1.3"
