[package]
name = "kalkulator_do_szkol_sredniej"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "assets/"  
res = "android_res"
icon = "@mipmap/ic_launcher"
version_code = 1
version_name = "Initial"
min_sdk_version = 21
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[package.metadata.android.activity_attributes]
"android:exported" =  "true"
"android:screenOrientation" = "userLandscape"

[[package.metadata.android.feature]]
name = "android.hardware.touchscreen"
required = false

#[[package.metadata.android.permission]]
#name = "android.permission.INTERNET"

[features]
default = ["subscriber"]
subscriber = ["tracing-subscriber"]
tracy = ["tracing-tracy", "tracing-subscriber"]

[dependencies]
egui-macroquad = "0.17.3"
egui_plot = "0.32.1"
macroquad = "0.4.14"
egui_extras = { version = "=0.31.1", features = ["image"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.41"
tracing-tracy = { version = "0.11.4", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"],optional = true }
